--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 body {
   height: 100vh;
   background:
-    linear-gradient(rgba(8, 20, 35, 0.90), rgba(8, 20, 35, 0.90)),
+    linear-gradient(to right, rgba(8,20,35,0.80) 40%, rgba(8,20,35,0.55) 100%),
     url('background.png') no-repeat center center/cover;
   color: #f5f5f5;
   font-family: 'Inter', sans-serif;
@@ -43,7 +43,7 @@ body {
 }
 
 .logo {
-  width: 150px;
+  width: 180px;
   margin-bottom: 70px;
   opacity: 0.95;
   transition: transform 0.6s ease;
